2.0.1:
  - allow disabling of ITAPS iterface code to ease building of shared library
  - fix broken VertexConditionNumber quality metric
  - fix unusable iGeom/iRel interface classes
  - fix bugs in iRel interface class
  - fix floating point error in TrustRegion for zero-diagonal Hessian blocks
  - fix trapping of floating point errors in debug builds
  - fix inverted map for quadratic tetrahedral elements