@@ -1,7 +1,18 @@
 @TEST_MAKE_INCLUDE@
 LDADD = $(top_builddir)/libmesquite.la
-check_PROGRAMS = tutorial
+check_PROGRAMS = tutorial wrapper lowlevel
+TESTS = run
+
 tutorial_SOURCES = tutorial.cpp
 tutorial_DEPENDENCIES = $(LDADD)
 
+wrapper_SOURCES = wrapper.cpp
+wrapper_DEPENDENCIES = $(LDADD)
+
+lowlevel_SOURCES = lowlevel.cpp
+lowlevel_DEPENDENCIES = $(LDADD)
+
 MOSTLYCLEANFILES = original_mesh.vtk  smoothed_mesh.vtk
+
+exampledir = ${docdir}/examples
+example_DATA = tutorial.cpp tutorial.make
